Fix global toc gaps

--- a/ulwazi/theme/ulwazi/assets/main.scss
+++ b/ulwazi/theme/ulwazi/assets/main.scss
@@ -90,3 +90,17 @@ p {
   padding-bottom: 14.76px;
   margin: 0;
 }
+
+.p-side-navigation__link {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.p-side-navigation__item .nav-item {
+  min-height: 32px;
+}
+
+.p-table-of-contents__list .p-table-of-contents__link {
+  padding-top: 0;
+  padding-bottom: 0;
+}
